# aitios

./: .gitignore  Cargo.toml  README.md
src/: geom.rs  lib.rs  main.rs
src/geom/: aabb.rs  mod.rs  octree.rs  raster.rs  scene.rs  spatial.rs  surf.rs  tri.rs  triangle_bins.rs  vtx.rs
src/geom/sampling/: density.rs  mod.rs  sphere.rs
src/geom/sampling/darts/: mod.rs  vtx.rs
src/geom/surf/: builder.rs  mod.rs  sampling.rs
src/geom/surf/sampling/: area_weighted.rs  bins.rs  darts.rs  mod.rs  vtx.rs
src/sim/: effect.rs  mod.rs  sim.rs  simbuilder.rs  surf.rs  ton.rs
src/sim/effect/: blend.rs  effect.rs  mod.rs  ramp.rs  scene.rs  substance_color.rs  substance_map.rs  substance_map_material.rs  substance_mapper.rs  surfel.rs
src/sink/: mod.rs  mtl.rs  obj.rs
test-scenes/buddha-pedestal/: buddha-pedestal.mtl
test-scenes/buddha-scene/: buddha-scene.mtl
test-scenes/buddha-scene-iron-concrete/: buddha-scene-iron-concrete.mtl
test-scenes/street-lowpoly/: street-lowpoly.mtl
testdata/: joined-pipes-floorless.mtl  joined-pipes.blend  joined-pipes.blend1  joined-pipes.mtl  pipe DN125.obj.mtl
tests/: bounce_test.rs  buddha_room_bronze_test.rs  flow_test.rs  mass_conservation_test.rs  multi_weathering.rs  multi_weathering_test.rs  ramp_test.rs  street_test.rs  surfel_sampling_by_density_test.rs  surfel_sampling_by_sample_distance_test.rs
tests/common/: mod.rs
