[package]
name = "aitios"
version = "0.1.0"
authors = ["PhilippStadler"]

[features]
default = [ "dump_surfels" ]
dump_surfels = []

[dependencies]
log = "0.3.8"
cgmath = "0.15.0"
tobj = "0.1.6"
rand = "0.3.18"
image = "0.17.0"
fux_kdtree = "0.2.0"

[dev-dependencies]
chrono = "0.4.0"
simplelog = "0.4.4"
